serde-query/tests/compile-fail/query_parse_error.stderr
error: 1..1: expected '[' or an identifier, got EOF
 --> $DIR/query_parse_error.rs:3:5
  |
3 |     #[query(r#"."#)]
  |     ^^^^^^^^^^^^^^^^

error: 1..22: expected an index or a quoted field inside indexing, got Field
 --> $DIR/query_parse_error.rs:5:5
  |
5 |     #[query(r#".[kubernetes_clusters]"#)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: 1..5: expected '[' or an identifier, got Error
 --> $DIR/query_parse_error.rs:7:5
  |
7 |     #[query(r#".😎"#)]
  |     ^^^^^^^^^^^^^^^^^^
